--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,14 +7,5 @@
     <h1>test</h1>
     <video id="streaming" width="300" controls></video>
   </body>
-  <script>
-      var constraint = { audio: true, video: { width: 1280, height: 720 } };
-      navigator.mediaDevices.getUserMedia(constraint).then( (mediaStream)=>{
-          var video = document.getElementById("streaming");
-          video.srcObject = mediaStream;
-          video.onloadedmetadata = (e) => {
-            video.play();
-          };
-      }).catch(err => console.log(err) );
-  </script>
+  <script src="bundle.js"></script>
 </html>
